--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "node-global-storage": "^3.0.1",
     "nodemon": "^3.1.7",
+    "paypal-rest-sdk": "^1.8.1",
     "react-hot-toast": "^2.5.1"
   }
 }
